# muhex

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  flake.nix  prepare_bench.sh
.github/workflows/: publish.yml  release.yml  test.yml
benches/: benchmark.rs
proptest-regressions/: lib.txt
scripts/: generate_benchmarks.py
src/: buf.rs  lib.rs  serde.rs
