[package]
name = "muhex"
version = "0.2.0"
description = "A zero-dependencies, SIMD enabled hex crate"
authors = ["Caina Costa <me@cfcosta.com>"]
categories = ["encoding"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cfcosta/muhex"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
faster-hex = "0.10.0"
hex = "0.4.3"
proptest = "1.6.0"
serde_json = "1.0.135"
test-strategy = "0.4.0"

[features]
default = []
serde = ["dep:serde", "hex/serde"]

[[bench]]
name = "benchmark"
harness = false
